Work on Ethereal Guide

--- a/soverance.com/Areas/Ethereal/Views/Ethereal/EULA.cshtml
+++ b/soverance.com/Areas/Ethereal/Views/Ethereal/EULA.cshtml
@@ -27,18 +27,18 @@
                 <div class="posts-nav">
                     <div class="row">
                         <div class="col-md-6">
-                            <a href="#" class="nav_prev nav-btn td-none" style="background-image: url('/images/blog/blog-img-1.jpg');">
+                            <a href="/ethereal/guide/loot" class="nav_prev nav-btn td-none" style="background-image: url('/images/games/ethereal/loot-pre-header.jpg');">
                                 <div class="nav_content">
-                                    <div class="fsize-14 fweight-700 uppercase color-1">Previous Post</div>
-                                    <div class="nav-title font-agency fsize-24 fweight-700 color-white uppercase">Shirloin leberkas pig, rump ham hock tail shank burgdogen</div>
+                                    <div class="fsize-14 fweight-700 uppercase color-1">Ethereal Loot Table</div>
+                                    <div class="nav-title font-agency fsize-24 fweight-700 color-white uppercase">Find out where all the best spells, weapons, and armor can be found!</div>
                                 </div>
                             </a>
                         </div>
                         <div class="col-md-6 text-right">
-                            <a href="#" class="nav_next nav-btn td-none" style="background-image: url('/images/blog/blog-img-2.jpg');">
+                            <a href="/ethereal/guide/ansel" class="nav_next nav-btn td-none" style="background-image: url('/images/games/ethereal/ansel-pre-header.jpg');">
                                 <div class="nav_content">
-                                    <div class="fsize-14 fweight-700 uppercase color-1">Next Post</div>
-                                    <div class="nav-title font-agency fsize-24 fweight-700 color-white uppercase">Meatlof strip steak ball tip venison prosciuto shankle</div>
+                                    <div class="fsize-14 fweight-700 uppercase color-1">Screenshots with Ansel</div>
+                                    <div class="nav-title font-agency fsize-24 fweight-700 color-white uppercase">Learn how to take beautiful high quality screenshots with Nvidia Ansel.</div>
                                 </div>
                             </a>
                         </div>
