--- a/soverance.com/Views/Shared/_Layout.cshtml
+++ b/soverance.com/Views/Shared/_Layout.cshtml
@@ -209,7 +209,7 @@
             <div class="table-row">
                 <div class="table-cell valign-middle text-left">
                     <a href="index.html" class="logo">
-                        <img src="~/images/logo.png" alt="" class="img-responsive inline-block">
+                        <img src="~/images/logos/soverance.png" alt="" class="img-responsive inline-block">
                     </a>
                 </div>
                 <div class="table-cell valign-top text-center vm-sm">
@@ -227,8 +227,16 @@
                                     <li class="menu-item-has-children">
                                         <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Index">Ethereal Legends</a>
                                         <ul class="sub-menu">
-                                            <li>
-                                                <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Guide">Guide</a>                                                
+                                            <li class="menu-item-has-children">
+                                                <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Guide">Guide</a>
+                                                <ul class="sub-menu">
+                                                    <li>
+                                                        <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Loot">Loot Table</a>
+                                                    </li>
+                                                    <li>
+                                                        <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Ansel">Ansel</a>
+                                                    </li>
+                                                </ul>
                                             </li>
                                             <li>
                                                 <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="EULA">EULA</a>
@@ -306,7 +314,7 @@
             <div class="row mb110">
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <a href="index.html">
-                        <img src="~/images/logo.png" alt="">
+                        <img src="~/images/logos/soverance.png" alt="">
                     </a>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 text-right">
