_GamePreviewInsert partial view

--- a/soverance.com/Areas/Ethereal/Views/Ethereal/Ansel.cshtml
+++ b/soverance.com/Areas/Ethereal/Views/Ethereal/Ansel.cshtml
@@ -190,46 +190,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row mt60 wow fadeInLeft">
-                    <div class="related-post">
-                        <div class="related-item col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                            <a href="post.html" class="related-wrapper">
-                                <div class="related-img">
-                                    <img src="~/images/post/related-1.jpg" alt="">
-                                </div>
-                                <div class="related-title">
-                                    <div class="font-agency fsize-24 fweight-700 color-white uppercase">
-                                        Alcatra venison salsmi
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="related-item col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                            <a href="post.html" class="related-wrapper">
-                                <div class="related-img">
-                                    <img src="~/images/post/related-2.jpg" alt="">
-                                </div>
-                                <div class="related-title">
-                                    <div class="font-agency fsize-24 fweight-700 color-white uppercase">
-                                        Shoulder meatbal
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="related-item col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                            <a href="post.html" class="related-wrapper">
-                                <div class="related-img">
-                                    <img src="~/images/post/related-3.jpg" alt="">
-                                </div>
-                                <div class="related-title">
-                                    <div class="font-agency fsize-24 fweight-700 color-white uppercase">
-                                        Sousage pork chuck
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+                <partial name="_GamePreviewInsert" />
             </div>
         </div>
     </div>
