--- a/soverance.com/Areas/Ethereal/Views/Ethereal/EULA.cshtml
+++ b/soverance.com/Areas/Ethereal/Views/Ethereal/EULA.cshtml
@@ -127,8 +127,8 @@
                                 <div class="fsize-14 fweight-700 uppercase">
                                     SOME FINAL LEGAL STUFF
                                 </div>
-                                This EULA is effective as of January 1, 2017. Soverance Studios reserves the right to make changes to this EULA at any time, and your continued use of the Game constitutes acceptance of the EULA as it may exist at the time you play or otherwise use the Game. 
-                                This Agreement represents the complete agreement between you and Soverance Studios concerning the Game, and replaces all prior agreements and understandings between you and Soverance Studios regarding your use of the Game.  If a dispute involving your use of the Game arises, we agree to resolve it in an American court, in the U.S. state of Georgia.                            
+                                This EULA is effective as of January 1, 2017. Soverance Studios reserves the right to make changes to this EULA at any time, and your continued use of the Game constitutes acceptance of the EULA as it may exist at the time you play or otherwise use the Game.
+                                This Agreement represents the complete agreement between you and Soverance Studios concerning the Game, and replaces all prior agreements and understandings between you and Soverance Studios regarding your use of the Game.  If a dispute involving your use of the Game arises, we agree to resolve it in an American court, in the U.S. state of Georgia.
                         </div>
                         <div class="bottom-info-bl">
                             <div class="table">
@@ -143,6 +143,7 @@
                             </div>
                         </div>
                     </div>
+                    <partial name="_GamePreviewInsert" />
                 </div>
             </div>
         </div>
