More work on ethereal guide

--- a/soverance.com/Areas/Ethereal/Views/Ethereal/Guide.cshtml
+++ b/soverance.com/Areas/Ethereal/Views/Ethereal/Guide.cshtml
@@ -80,7 +80,7 @@
                                                     Scott McCutchen
                                                 </a>
                                                 <div class="fsize-14 fweight-700 uppercase color-1">
-                                                    Ethereal Designer
+                                                    Ethereal Creator
                                                 </div>
                                             </div>
                                         </div>
@@ -99,53 +99,100 @@
                                     </div>
                                 </blockquote>
                             </div>
-                            <p class="mt60">
-                                Brisket ham hock chuck cupim andouille beef ribs turducken pork belly. Picanha filet mignon tenderloin venison sirloin biltong. Picanha jerky venison chuck, filet mignon sirloin t-bone rump short loin salami pork loin tenderloin corned beef swine ground round. Ball tip rump prosciutto ham. Sirloin venison jowl brisket shank andouille.
-                            </p>
-                            <div class="clearfix">
-                                <p class="col-lg-4 col-md-4 col-sm-12 col-sm-12 m0">
-                                    <img src="~/images/post/post-small-1.jpg" alt="" class="img-responsive mlr-auto mb20">
-                                </p>
-                                <p class="col-lg-4 col-md-4 col-sm-12 col-sm-12 m0">
-                                    <img src="~/images/post/post-small-2.jpg" alt="" class="img-responsive mlr-auto mb20">
-                                </p>
-                                <p class="col-lg-4 col-md-4 col-sm-12 col-sm-12 m0">
-                                    <img src="~/images/post/post-small-3.jpg" alt="" class="img-responsive mlr-auto mb20">
-                                </p>
+                            <div class="row mt60 wow fadeInLeft">
+                                <div class="related-post">
+                                    <div class="related-item col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                        <a href="/ethereal/guide/world" class="related-wrapper">
+                                            <div class="related-img">
+                                                <img src="~/images/games/ethereal/guide-world.jpg" alt="">
+                                            </div>
+                                            <div class="related-title">
+                                                <div class="font-agency fsize-24 fweight-700 color-white uppercase">
+                                                    World
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="related-item col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                        <a href="/ethereal/guide/systems" class="related-wrapper">
+                                            <div class="related-img">
+                                                <img src="~/images/games/ethereal/guide-systems.jpg" alt="">
+                                            </div>
+                                            <div class="related-title">
+                                                <div class="font-agency fsize-24 fweight-700 color-white uppercase">
+                                                    Systems
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="related-item col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                        <a href="/ethereal/guide/loot" class="related-wrapper">
+                                            <div class="related-img">
+                                                <img src="~/images/games/ethereal/guide-loot.jpg" alt="">
+                                            </div>
+                                            <div class="related-title">
+                                                <div class="font-agency fsize-24 fweight-700 color-white uppercase">
+                                                    Loot
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
-                            <p class="mt30">
-                                Andouille frankfurter hamburger, swine leberkas tenderloin cupim. Ground round ball tip pastrami, turducken chicken porchetta fatback frankfurter. Pig kielbasa jowl strip.
-                            </p>
-                            <p>
-                                Steak sausage pork loin bacon tri-tip meatball shoulder cupim beef pork chop kevin boudin. Short loin pig meatball ham landjaeger pastrami. Drumstick ham hock chuck pork belly chicken prosciutto biltong salami ham pancetta.
-                            </p>
-                            <ul class="list-1">
-                                <li class="color5">
-                                    Buffalo drumstick doner short;
-                                </li>
-                                <li class="color5">
-                                    Loin pork chop strip steak ground round;
-                                </li>
-                                <li class="color5">
-                                    Short ribs kevin tri-tip burgdoggen.
-                                </li>
-                            </ul>
+                            <div class="row mt60 wow fadeInLeft">
+                                <div class="related-post">
+                                    <div class="related-item col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                        <a href="/ethereal/guide/ansel" class="related-wrapper">
+                                            <div class="related-img">
+                                                <img src="~/images/games/ethereal/guide-ansel.jpg" alt="">
+                                            </div>
+                                            <div class="related-title">
+                                                <div class="font-agency fsize-24 fweight-700 color-white uppercase">
+                                                    Ansel
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="related-item col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                        <a href="/ethereal/versions" class="related-wrapper">
+                                            <div class="related-img">
+                                                <img src="~/images/games/ethereal/guide-versions.jpg" alt="">
+                                            </div>
+                                            <div class="related-title">
+                                                <div class="font-agency fsize-24 fweight-700 color-white uppercase">
+                                                    Versions
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="related-item col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                        <a href="/ethereal/eula" class="related-wrapper">
+                                            <div class="related-img">
+                                                <img src="~/images/games/ethereal/guide-eula.jpg" alt="">
+                                            </div>
+                                            <div class="related-title">
+                                                <div class="font-agency fsize-24 fweight-700 color-white uppercase">
+                                                    EULA
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="bottom-info-bl">
                             <div class="table">
                                 <div class="table-cell valign-middle">
                                     <i class="fa fa-user color-6 fsize-14" aria-hidden="true"></i>
-                                    <span class="color-2 fsize-14 ml5">by Admin</span>
+                                    <span class="color-2 fsize-14 ml5">by Scott</span>
                                 </div>
                                 <div class="table-cell valign-middle text-right">
-                                    <i class="fa fa-comment color-6 fsize-14" aria-hidden="true"></i>
-                                    <span class="color-2 fsize-14 ml5">452</span>
+
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <partial name="_GamePreviewInsert" />
             </div>
         </div>
     </div>
