--- a/soverance.com/Views/Shared/_GamePreviewInsert.cshtml
+++ b/soverance.com/Views/Shared/_GamePreviewInsert.cshtml
@@ -31,7 +31,7 @@
                 </a>
             </div>
             <div class="related-item col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <a href="echosphere" class="related-wrapper">
+                <a href="/echosphere" class="related-wrapper">
                     <div class="related-img">
                         <img src="~/images/blog/echosphere-preview.jpg" alt="">
                     </div>
