--- a/soverance.com/Views/Shared/_Layout.cshtml
+++ b/soverance.com/Views/Shared/_Layout.cshtml
@@ -231,12 +231,21 @@
                                                 <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Guide">Guide</a>
                                                 <ul class="sub-menu">
                                                     <li>
-                                                        <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Loot">Loot Table</a>
+                                                        <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="World">World</a>
+                                                    </li>
+                                                    <li>
+                                                        <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Systems">Systems</a>
+                                                    </li>
+                                                    <li>
+                                                        <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Loot">Loot</a>
                                                     </li>
                                                     <li>
                                                         <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Ansel">Ansel</a>
                                                     </li>
                                                 </ul>
+                                            </li>
+                                            <li>
+                                                <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Versions">Versions</a>
                                             </li>
                                             <li>
                                                 <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="EULA">EULA</a>
