--- a/soverance.com/Areas/Ethereal/Views/Ethereal/World.cshtml
+++ b/soverance.com/Areas/Ethereal/Views/Ethereal/World.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Ethereal Loot Table";
+    ViewData["Title"] = "Ethereal World Guide";
 }
 
 <!-- PAGE NAME START -->
@@ -7,14 +7,14 @@
     <div class="container">
         <div class="row">
             <h1 class="page-title">
-                Ethereal Loot Table
+                Ethereal World
             </h1>
             <div class="breadcrumbs">
                 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> /
                 <a asp-area="" asp-controller="Home" asp-action="Games">Games</a> /
                 <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Index">Ethereal Legends</a> /
                 <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Guide">Guide</a> /
-                <span class="color-1">Loot Table</span>
+                <span class="color-1">World Guide</span>
             </div>
         </div>
     </div>
@@ -28,7 +28,7 @@
                 <div class="posts-nav">
                     <div class="row">
                         <div class="col-md-6">
-                            <a href="/ethereal/eula" class="nav_prev nav-btn td-none" style="background-image: url('/images/games/ethereal/eula-pre-header.jpg');">
+                            <a href="/ethereal/guide/loot" class="nav_prev nav-btn td-none" style="background-image: url('/images/games/ethereal/loot-pre-header.jpg');">
                                 <div class="nav_content">
                                     <div class="fsize-14 fweight-700 uppercase color-1">Ethereal Loot Table</div>
                                     <div class="nav-title font-agency fsize-24 fweight-700 color-white uppercase">Find out where all the best spells, weapons, and armor can be found!</div>
@@ -47,7 +47,7 @@
                 </div>
                 <div class="post-content mt60">
                     <div class="post-image">
-                        <img src="~/images/games/ethereal/loot-header.jpg" alt="">
+                        <img src="~/images/games/ethereal/world-header.jpg" alt="">
                     </div>
                     <div class="post-bottom background-4">
                         <div class="p60">
@@ -55,34 +55,29 @@
                                 <div class="table-row">
                                     <div class="table-cell valign-top">
                                         <div class="fsize-14 fweight-700 uppercase color-1">
-                                            Enemy Loot Table
+                                            Ethereal World Guide
+                                        </div>
+                                    </div>
+                                    <div class="table-cell valign-top text-right">
+                                        <div class="fsize-14 fweight-700 uppercase">
+                                            
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="mt20">
-                                <iframe width="840" height="660" frameborder="0" scrolling="no" src="https://soverance.sharepoint.com/_layouts/15/Doc.aspx?sourcedoc={503471b5-336c-4df1-a28e-882e0f98b3b8}&action=embedview&ActiveCell='Enemy%20Loot'!A1&Item='Enemy%20Loot'!A1%3AF45&wdInConfigurator=True"></iframe>
+                                <p>Coming Soon!</p>
                             </div>
-                            <hr />
-                            <img class="img-responsive mlr-auto mb20" src="~/images/games/ethereal/SignetGear.jpg" alt="" width="506" height="145" />
-                            <div class="table">
-                                <div class="table-row">
-                                    <div class="table-cell valign-top">
-                                        <div class="fsize-14 fweight-700 uppercase color-1">
-                                            Item List
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <p class="mt60">
-                                <iframe width="840" height="660" frameborder="0" scrolling="no" src="https://soverance.sharepoint.com/_layouts/15/Doc.aspx?sourcedoc={503471b5-336c-4df1-a28e-882e0f98b3b8}&action=embedview&ActiveCell='Inventory'!A1&Item='Inventory'!A1%3AO118&wdInConfigurator=True"></iframe>
-                            </p>
+                            
                         </div>
                         <div class="bottom-info-bl">
                             <div class="table">
                                 <div class="table-cell valign-middle">
                                     <i class="fa fa-user color-6 fsize-14" aria-hidden="true"></i>
                                     <span class="color-2 fsize-14 ml5">by Scott</span>
+                                </div>
+                                <div class="table-cell valign-middle text-right">
+
                                 </div>
                             </div>
                         </div>
