ethereal main game page

--- a/soverance.com/Areas/Ethereal/Views/Ethereal/Guide.cshtml
+++ b/soverance.com/Areas/Ethereal/Views/Ethereal/Guide.cshtml
@@ -59,14 +59,14 @@
                                     </div>
                                     <div class="table-cell valign-top text-right">
                                         <div class="fsize-14 fweight-700 uppercase">
-                                            
+
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="mt20">
                                 <p>Welcome to the <i>Ethereal Legends</i> Game Guide!</p>
-                                <p>Here on this site is where you'll find the information you’ll need to know to in order to make your experience playing Ethereal Legends the best it can possibly be. Use the main menu to navigate through the various topics; peruse update notes in the Version History, learn more about the game’s features and the options at your disposal, check out the game’s source code, or get involved in the community around Ethereal.</p>                                
+                                <p>Here on this site is where you'll find the information you’ll need to know to in order to make your experience playing Ethereal Legends the best it can possibly be. Use the main menu to navigate through the various topics; peruse update notes in the Version History, learn more about the game’s features and the options at your disposal, check out the game’s source code, or get involved in the community around Ethereal.</p>
                             </div>
                             <div class="post-quote mt120">
                                 <blockquote class="p40 text-center">
@@ -178,6 +178,9 @@
                                         </a>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="mt20">
+
                             </div>
                         </div>
                         <div class="bottom-info-bl">
