--- a/soverance.com/Areas/Ethereal/Views/Ethereal/Index.cshtml
+++ b/soverance.com/Areas/Ethereal/Views/Ethereal/Index.cshtml
@@ -25,23 +25,53 @@
             <div class="top-bl">
                 <div class="game-img-slider bg-arrow">
                     <div class="image-wrapper">
-                        <a href="~/images/single-game/game-img-1.jpg" data-lightbox="game-slides">
-                            <img src="~/images/single-game/game-img-1.jpg" alt="" class="img-responsive">
+                        <a href="~/images/games/ethereal/large/nexus-zhan.png" data-lightbox="game-slides">
+                            <img src="~/images/games/ethereal/small-slide-1.jpg" alt="" class="img-responsive">
                         </a>
                     </div>
                     <div class="image-wrapper">
-                        <a href="~/images/single-game/game-img-2.jpg" data-lightbox="game-slides">
-                            <img src="~/images/single-game/game-img-2.jpg" alt="" class="img-responsive">
+                        <a href="~/images/games/ethereal/large/zhan.png" data-lightbox="game-slides">
+                            <img src="~/images/games/ethereal/small-slide-2.jpg" alt="" class="img-responsive">
                         </a>
                     </div>
                     <div class="image-wrapper">
-                        <a href="~/images/single-game/game-img-3.jpg" data-lightbox="game-slides">
-                            <img src="~/images/single-game/game-img-3.jpg" alt="" class="img-responsive">
+                        <a href="~/images/games/ethereal/large/samaritan.png" data-lightbox="game-slides">
+                            <img src="~/images/games/ethereal/small-slide-3.jpg" alt="" class="img-responsive">
                         </a>
                     </div>
                     <div class="image-wrapper">
-                        <a href="~/images/single-game/game-img-4.jpg" data-lightbox="game-slides">
-                            <img src="~/images/single-game/game-img-4.jpg" alt="" class="img-responsive">
+                        <a href="~/images/games/ethereal/large/nexus-zhan-2.png" data-lightbox="game-slides">
+                            <img src="~/images/games/ethereal/small-slide-4.jpg" alt="" class="img-responsive">
+                        </a>
+                    </div>
+                    <div class="image-wrapper">
+                        <a href="~/images/games/ethereal/large/daemon.jpg" data-lightbox="game-slides">
+                            <img src="~/images/games/ethereal/small-slide-5.jpg" alt="" class="img-responsive">
+                        </a>
+                    </div>
+                    <div class="image-wrapper">
+                        <a href="~/images/games/ethereal/large/earthgolem.jpg" data-lightbox="game-slides">
+                            <img src="~/images/games/ethereal/small-slide-6.jpg" alt="" class="img-responsive">
+                        </a>
+                    </div>
+                    <div class="image-wrapper">
+                        <a href="~/images/games/ethereal/large/icegiant.jpg" data-lightbox="game-slides">
+                            <img src="~/images/games/ethereal/small-slide-7.jpg" alt="" class="img-responsive">
+                        </a>
+                    </div>
+                    <div class="image-wrapper">
+                        <a href="~/images/games/ethereal/large/ghost.jpg" data-lightbox="game-slides">
+                            <img src="~/images/games/ethereal/small-slide-8.jpg" alt="" class="img-responsive">
+                        </a>
+                    </div>
+                    <div class="image-wrapper">
+                        <a href="~/images/games/ethereal/large/skydragon.jpg" data-lightbox="game-slides">
+                            <img src="~/images/games/ethereal/small-slide-9.jpg" alt="" class="img-responsive">
+                        </a>
+                    </div>
+                    <div class="image-wrapper">
+                        <a href="~/images/games/ethereal/large/skeletonking.jpg" data-lightbox="game-slides">
+                            <img src="~/images/games/ethereal/small-slide-10.jpg" alt="" class="img-responsive">
                         </a>
                     </div>
                 </div>
@@ -61,49 +91,66 @@
                     Ethereal Legends
                 </div>
                 <div class="mt30 lheight-26 fweight-300">
-                    <p>Pork chop pastrami meatball, picanha salami capicola drumstick tri-tip flank short loin strip steak prosciutto leberkas jowl fatback. Alcatra kielbasa sausage, turkey short ribs shank bresaola meatball jowl ball tip buffalo jowl venison fatback strip steak.</p>
-                    <p>Burgdoggen ham hock flank, pig beef ribs doner cow spare ribs tongue landjaeger. Sirloin meatloaf.</p>
-                </div>
-                <div class="mt30">
-                    <div class="rating text-left">
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
+                    <div class="table-cell valign-middle">
+                        <iframe src="https://store.steampowered.com/widget/428980/" width="480" height="190" frameborder="0"><span data-mce-type="bookmark" style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;" class="mce_SELRES_start">﻿</span></iframe>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 mb30">
                 <div class="default-tabs">
-                    <div class="game-char">
-                        <div id="progressline69" class="progress-line mb30">
-                            <div class="progress-title">
-                                Biltong corned beef tongue
-                            </div>
-                        </div>
-                        <div id="progressline80" class="progress-line mb30">
-                            <div class="progress-title">
-                                Beef short ribs leberkas cupim Drumstick
-                            </div>
-                        </div>
-                        <div id="progressline52" class="progress-line mb30">
-                            <div class="progress-title">
-                                Fatback bacon picanha leberkas pork
-                            </div>
-                        </div>
-                        <div id="progressline90" class="progress-line mb30">
-                            <div class="progress-title">
-                                Burgdoggen bresaola shankle
-                            </div>
-                        </div>
-                        <div id="progressline30" class="progress-line mb30">
-                            <div class="progress-title">
-                                Beef short ribs leberkas cupim Drumstick
-                            </div>
-                        </div>
+                    <div class="image-bl">
+                        <video id="ethereal" class="vjs-big-play-centered video-js vjs-default-skin vjs-16-9 game-full-img" controls preload="auto" width="570" height="450" poster="~/images/games/ethereal-slide-1.jpg"
+                               data-setup='{ "techOrder": ["youtube"], "sources": { "type": "video/youtube", "src": "https://www.youtube.com/watch?v=8dH-CnwhWC4"}}'></video>
                     </div>
                 </div>
+            </div>
+            <div class="widget-wrapper">
+                <br />
+                <table class="table list-1">
+                    <tbody>
+                        <tr>
+                            <td>
+                                <div class="table table-nobackground">
+                                    <div class="table-row">
+                                        <div class="latest-title table-cell valign-middle text-center pl20">
+                                            <div class="title-top font-agency fweight-700 uppercase color-white">
+                                                <i class="fa fa-shield fsize-80 fweight-400 color-6"></i>
+                                                <p>Active Combat</p>
+                                            </div>
+                                            <p>Your combat style is determined by the spells, weapons, and armor you choose to equip. With many different magic spells, multiple distinct weapon types, and numerous armor choices, you are provided with many options to defeat your enemies.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="table table-nobackground">
+                                    <div class="table-row">
+                                        <div class="latest-title table-cell valign-middle text-center pl20">
+                                            <div class="title-top font-agency fweight-700 uppercase color-white">
+                                                <i class="fa fa-puzzle-piece fsize-80 fweight-400 color-6"></i>
+                                                <p>Environment Puzzles</p>                                                
+                                            </div>
+                                            <p>A plethora of brain teasers awaits deep within the darkest corners of Arcadia. Explore and interact with the world around you to unlock new paths and discover secrets hidden in the Ethereal Realms.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="table table-nobackground">
+                                    <div class="table-row">
+                                        <div class="latest-title table-cell valign-middle text-center pl20">
+                                            <div class="title-top font-agency fweight-700 uppercase color-white">
+                                                <i class="fa fa-gamepad fsize-80 fweight-400 color-6"></i>
+                                                <p>Epic High Fantasy</p>
+                                            </div>
+                                            <p>A pure story of good versus evil. Explore gorgeous elemental locales reaching into the sky and beyond. Battle massive enemies, experience the powerful soundtrack, and enjoy a beautifully rendered fantasy powered by Unreal Engine 4. </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
