Endless Reach Mobile main page

--- a/soverance.com/Views/Shared/_Layout.cshtml
+++ b/soverance.com/Views/Shared/_Layout.cshtml
@@ -253,7 +253,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <a asp-area="" asp-controller="Home" asp-action="EndlessReach">Endless Reach</a>
+                                        <a asp-area="EndlessReach" asp-controller="EndlessReach" asp-action="Index">Endless Reach</a>
                                     </li>
                                 </ul>
                             </li>
