--- a/soverance.com/wwwroot/css/style.css
+++ b/soverance.com/wwwroot/css/style.css
@@ -631,7 +631,7 @@ img {
 
 .page-name {
   padding: 235px 0 100px 0;
-  background-image: url("../images/page-name.jpg");
+  background-image: url("../images/games/ethereal/page-name.jpg");
   background-repeat: no-repeat;
   background-size: auto 120%; }
   .page-name .page-title {
